Fixing paragraph width on mobile, and site title size on both

--- a/css/style.scss
+++ b/css/style.scss
@@ -335,7 +335,7 @@ pre {
   position: relative;
 }
 .site-title {
-  font-size: 64px;
+  font-size: 32px;
   font-weight: 100;
   font-family: 'PT Sans';
   text-transform: capitalize;
@@ -343,7 +343,7 @@ pre {
   margin-top: 1em;
   @include media-query($on-palm) {
       .wrapper {
-        font-size: 32px;
+        font-size: 24px;
       }
   }
 }
@@ -533,11 +533,13 @@ pre {
 .post-content {
   margin-bottom: $spacing-unit;
   padding-bottom: 3em !important;
-  max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-  max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
-  padding-right: $spacing-unit * 4;
-  padding-left: $spacing-unit * 4;
 
+  @include media-query($on-laptop) {
+    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
+    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+    padding-right: $spacing-unit * 4;
+    padding-left: $spacing-unit * 4;
+  }
   p {
     font-size: 0.9rem;
   }
